# assignment3

./: .coverage  README.md  calculator.py  main.py  pyproject.toml
.github/workflows/: python-ci.yml
src/: calculator.py
src/assignment3_calculator.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_operations.py
